@@ -382,6 +382,14 @@ GWENHYWFAR_API
                                                char *buffer,
                                                unsigned int *bsize);
 
+/**
+ * Writes exactly the amount of bytes given or returns an error.
+ */
+GWENHYWFAR_API
+  GWEN_ERRORCODE GWEN_BufferedIO_WriteRawForced(GWEN_BUFFEREDIO *bt,
+						char *buffer,
+						unsigned int *bsize);
+
 
 
 #ifdef __cplusplus
